# htmx-csr

./: .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  fly.toml  package.json  tailwind.config.ts  tsconfig.json
csr-app/: .dockerignore  package.json  tailwind.config.ts  tsconfig.json
csr-app-js/: Dockerfile  jsconfig.json  package-lock.json  package.json  tailwind.config.mjs
csr-app-js/app/: index.html  index.mjs
csr-app-js/app/components/: nav-bar.mjs  suspense.mjs
csr-app-js/app/functions/: html.mjs  router.mjs
csr-app-js/app/routes/: albums.mjs  index.mjs  post.mjs  posts.mjs
csr-app-js/app/types/: album.js  post.js  route.js
csr-app/scripts/: build-dev.ts  dev.ts
csr-app/src/: app.tsx
csr-app/src/components/: html.tsx  nav-bar.tsx  suspense.tsx
csr-app/src/routes/: albums.tsx  index.ts  post.tsx  posts.tsx
scripts/: build-dev.ts  build.ts
src/: app.tsx
src/classes/: htmx-router.ts
src/client/: app.ts  app.tsx  prelude.ts
src/components/: html.tsx  nav-bar.tsx
src/functions/: create-htmx-router.ts  intercept-htmx-request.ts  response-html.ts
src/jsx/: render.ts
src/routes/: albums.tsx  index.ts  item-post.tsx  list-albums.tsx  list-posts.tsx  page-albums.tsx  page-post.tsx  page-posts.tsx  post.tsx  posts.tsx
src/server/: app.tsx  main.rs
src/types/: htmx-router.ts
ssr-app/: .dockerignore  Dockerfile  bun.lockb  package.json
ssr-app/scripts/: build-dev.ts  build.ts
views/: counter.html  doc.html  heading.html  navbar-item.html  navbar.html  suspense.html  tsconfig.json
views/templates/: counter.tsx  navbar.tsx
(+110 files in other folders)
